Added New Blog Name

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Stephen Jiang"
+title: "Stochastic Spinnakers"
 description: "The Intersection of Software Enginerring, Finance, Data Science, and Economics"
 url: "https://stephen-jiang.github.io/"
 baseurl: ""  # Leave empty for user/organization site
