--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: "Stochastic Spinnakers"
+title: "Stephen Jiang - Stochastic Spinnakers"
 description: "The Intersection of Software Enginerring, Finance, Data Science, and Economics"
-url: "https://stephen-jiang.github.io/"
+masthead_title: "Stochastic Spinnakers"
+url: "https://stephenjiang.io/"
 baseurl: ""  # Leave empty for user/organization site
 
 remote_theme: "mmistakes/minimal-mistakes@4.27.1"
@@ -26,7 +27,7 @@ author:
       url: "https://github.com/Stephen-Jiang"
 
 # Pagination (home page only)
-paginate: 5
+paginate: 10
 paginate_path: "/page:num/"
 
 # Archives
