--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ minimal_mistakes_skin: "dark"
 
 plugins:
   - jekyll-include-cache
+  - jekyll-feed 
 
 markdown: kramdown
 highlighter: rouge
@@ -54,3 +55,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+
+atom_feed:
+  path: "feed.xml"  # default
+  posts_limit: 10  # default
