--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Stephen Jiang - Stochastic Spinnakers"
-description: "The Intersection of Software Enginerring, Finance, Data Science, and Economics"
+description: "The Intersection of Software Engineering, Finance, Data Science, and Economics"
 masthead_title: "Stochastic Spinnakers"
 url: "https://stephenjiang.io"
 baseurl: ""  # Leave empty for user/organization site
@@ -20,7 +20,7 @@ permalink: /:categories/:title/
 author:
   name: "Stephen Jiang"
   avatar: "/assets/images/avatar.jpg"
-  bio: "The Intersection of Software Enginerring, Finance, Data Science, and Economics"
+  bio: "The Intersection of Software Engineering, Finance, Data Science, and Economics"
   location: "Earth"
   links:
     - label: "GitHub"
@@ -49,6 +49,7 @@ defaults:
       read_time: true
       comments: false
       author_profile: true
+      classes: wide
   - scope:
       path: ""
       type: "pages"
