Migrated To Github Actions And Enabled Dependency Monitoring

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ masthead_title: "Stochastic Spinnakers"
 url: "https://stephenjiang.io"
 baseurl: ""  # Leave empty for user/organization site
 
-remote_theme: "mmistakes/minimal-mistakes@4.27.3"
+theme: minimal-mistakes-jekyll
 
 minimal_mistakes_skin: "dark"
 
